# Law-Office

./: .gitignore  AOS Questionnaire.doc  COS_EOS_B2.doc  README.md  package-lock.json  package.json
.cursor/rules/: specify-rules.mdc
.specify/memory/: constitution.md
.specify/templates/: plan-template.md  spec-template.md  tasks-template.md
apps/firm-site/: .env.example  README.md  THIRD_PARTY_NOTICES.md  eslint.config.mjs  lighthouserc.json  next.config.ts  package.json  playwright.config.ts
apps/uscis-fill-local/: .gitignore  Makefile  README.md  pyproject.toml
apps/uscis-fill-local/src/uscis_fill/: __init__.py  __main__.py  audit.py  cli.py  config.py  db.py  models.py  normalize.py  pdf_utils.py  simple_fill.py  tally_import.py
apps/uscis-fill-local/src/uscis_fill/mappings/: profile_to_i485.yaml  tally_to_profile.yaml
apps/uscis-fill-local/src/uscis_fill/repositories/: __init__.py  clients_matters.py  submissions.py
apps/uscis-fill-local/src/uscis_fill/services/: draft_service.py  review_service.py  submission_service.py
apps/uscis-fill-local/src/uscis_fill/ui/: app.py
apps/uscis-fill-local/tests/: conftest.py
apps/uscis-fill-local/tests/fixtures/: tally_export_sample.csv  tally_export_sample.json
apps/uscis-fill-local/tests/golden/: __init__.py  test_pdf_fill.py
apps/uscis-fill-local/tests/unit/: test_normalize.py  test_pdf_utils.py  test_simple_fill.py  test_tally_import.py
documents/: tally.csv
specs/002-tally-uscis-prefill/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-firm-site-replica/: plan.md  (+5 more)
(+195 files in other folders)
